# creature-foja

./: .air.toml  .deadcode-out  .dockerignore  .editorconfig  .eslintrc.yaml  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .release-notes-assistant.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.rootless  LICENSE  Makefile  README.md  RELEASE-NOTES.md  SECURITY.md  app.ini  fly.toml  go.mod  go.sum  main.go  package-lock.json  package.json  playwright.config.js  pyproject.toml  release-notes-assistant.sh  renovate.json  stylelint.config.js  tailwind.config.js  webpack.config.js
.devcontainer/: devcontainer.json
.forgejo/: cascading-pr-end-to-end  cascading-release-end-to-end  pull_request_template.md
.gitea/: pull_request_template.md
.woodpecker/: .deploy.yaml
assets/: go-licenses.json
cmd/: actions.go  admin_auth_ldap_test.go  admin_regenerate.go  admin_user_create.go  cert.go  docs.go  doctor.go  doctor_convert.go  doctor_test.go  dump.go  dump_test.go  generate.go  hook.go  hook_test.go  keys.go  main.go  main_test.go  manager.go  manager_logging.go  migrate_storage.go  migrate_storage_test.go  serv.go  web.go
contrib/: upgrade.sh
docker/: README.md
models/: fixture_test.go  main_test.go  org_team_test.go  org_test.go  repo_test.go  repo_transfer.go  repo_transfer_test.go
release-notes/: 3285.md  3307.md  3363.md  3383.md  3414.md  3434.md  3442.md  3642.md  3654.md  3729.md  3752.md  3847.md  3917.md  3922.md  3972.md  3989.md  4072.md  4083.md  4139.md  4145.md  4160.md  4189.md  4201.md  4212.md  4218.md  4253.md  (+14 more)
(+1855 files in other folders)
